--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <header>
       <div class="topnav">
-        <a href="/about-us.html">A</a>
+        <a href="./about-us.html">A</a>
         <a href="/index.html">B</a>
-        <a href="/Results.html">C</a>
+        <a href="./Results.html">C</a>
       </div>
       <div class="ceefilm"><a href=""></a>CeeFilm</div>
     </header>
