--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="topnav">
         <a href="./about-us.html">A</a>
-        <a href="/index.html">B</a>
+        <a href="./index.html">B</a>
         <a href="./Results.html">C</a>
       </div>
       <div class="ceefilm"><a href=""></a>CeeFilm</div>
